# Renoir

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
Core/: CMakeLists.txt
Core/include/: Application.h
Core/src/: Application.cpp
Platform/: CMakeLists.txt
Platform/include/: RenoirLog.h
Platform/src/: RenoirLog.cpp
