CMAKE_MINIMUM_REQUIRED(VERSION 3.28)
project(Renoir)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(EXECUTABLE_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_definitions(-DAD_DEFINE_RES_ROOT_DIR=\"${CMAKE_SOURCE_DIR}/Resource/\")

if(WIN32)
    message("Running on Windows")
    add_definitions(-DAD_ENGINE_PLATFORM_WIN32)
elseif(UNIX)
    if(APPLE)
        message("Running on MacOS")
        add_definitions(-DAD_ENGINE_PLATFORM_MACOS)
    else()
        message("Running on LINUX")
        add_definitions(-DAD_ENGINE_PLATFORM_LINUX)
    endif()
else()
    message("Unknown device :(")
endif()

find_package(Vulkan REQUIRED)
if(Vulkan_FOUND)
    message("Vulkan founded: ${Vulkan_INCLUDE_DIRS}")
    include_directories(${Vulkan_INCLUDE_DIRS})
endif()

include(Platform/include)
include(Core/include)

add_subdirectory(Platform)
add_subdirectory(Core)
add_subdirectory(Editor)
add_subdirectory(App)
